; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_ppccap.c_sha256_block_data_order.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_ppccap.c_sha256_block_data_order.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENSSL_ppccap_P = common dso_local global i32 0, align 4
@PPC_CRYPTO207 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sha256_block_data_order(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* @OPENSSL_ppccap_P, align 4
  %8 = load i32, i32* @PPC_CRYPTO207, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @sha256_block_p8(i8* %12, i8* %13, i64 %14)
  br label %21

16:                                               ; preds = %3
  %17 = load i8*, i8** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @sha256_block_ppc(i8* %17, i8* %18, i64 %19)
  br label %21

21:                                               ; preds = %16, %11
  %22 = phi i32 [ %15, %11 ], [ %20, %16 ]
  ret void
}

declare dso_local i32 @sha256_block_p8(i8*, i8*, i64) #1

declare dso_local i32 @sha256_block_ppc(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
